--- a/main.html
+++ b/main.html
@@ -239,13 +239,16 @@
                 <div class="material_wrap">
                     <ul class="tabs">
                         <li>
-                            <a href="" data="tab01" class="active">사진자료<i class="icon-play"></i></a>
+                            <a class="tablink active" data="tab01">사진자료<i class="icon-play"></i></a>
+                            <a href="/front/board/theme/list.wp?boardId=gallery&menuId=MENU000000000000093" class="more"><i class="icon-plus"></i></a>
                         </li>
                         <li>
-                            <a href="" data="tab02">언론보도<i class="icon-play"></i></a>
+                            <a class="tablink" data="tab02">언론보도<i class="icon-play"></i></a>
+                            <a href="/front/board/theme/list.wp?boardId=media&menuId=MENU000000000000089" class="more"><i class="icon-plus"></i></a>
                         </li>
                         <li>
-                            <a href="" data="tab03">영상자료<i class="icon-play"></i></a>
+                            <a class="tablink" data="tab03">영상자료<i class="icon-play"></i></a>
+                            <a href="/front/board/theme/list.wp?boardId=mov&menuId=MENU000000000000094" class="more"><i class="icon-plus"></i></a>
                         </li>
                     </ul>
 
@@ -306,6 +309,7 @@
                                     </p>
                                     <div class="news-title">
                                         <h5>장애인 지역사회통합돌봄지원센터</h5>
+                                        <p>2019.12.01</p>
                                     </div>
                                 </a>
                             </li>
@@ -316,6 +320,7 @@
                                     </p>
                                     <div class="news-title">
                                         <h5>제주대학교 업무 협약 체결</h5>
+                                        <p>2019.12.01</p>
                                     </div>
                                 </a>
                             </li>
@@ -326,6 +331,7 @@
                                     </p>
                                     <div class="news-title">
                                         <h5>제주시, 통합돌봄 운영</h5>
+                                        <p>2019.12.01</p>
                                     </div>
                                 </a>
                             </li>
@@ -336,6 +342,7 @@
                                     </p>
                                     <div class="news-title">
                                         <h5>지역사회통합돌봄 본격 시동</h5>
+                                        <p>2019.12.01</p>
                                     </div>
                                 </a>
                             </li>
@@ -349,6 +356,7 @@
                                     </p>
                                     <div class="news-title">
                                         <h5>장애인 지역사회통합돌봄지원센터</h5>
+                                        <p>2019.12.01</p>
                                     </div>
                                 </a>
                             </li>
@@ -359,6 +367,7 @@
                                     </p>
                                     <div class="news-title">
                                         <h5>제주대학교 업무 협약 체결</h5>
+                                        <p>2019.12.01</p>
                                     </div>
                                 </a>
                             </li>
@@ -369,6 +378,7 @@
                                     </p>
                                     <div class="news-title">
                                         <h5>제주시, 통합돌봄 운영</h5>
+                                        <p>2019.12.01</p>
                                     </div>
                                 </a>
                             </li>
@@ -379,13 +389,13 @@
                                     </p>
                                     <div class="news-title">
                                         <h5>지역사회통합돌봄 본격 시동</h5>
+                                        <p>2019.12.01</p>
                                     </div>
                                 </a>
                             </li>
                         </ul>
                     </div>
 
-                    <a href="#" class="more"><i class="icon-plus"></i></a>
                 </div>
             </div>
         </div>
