--- a/sub01.html
+++ b/sub01.html
@@ -47,9 +47,9 @@
                         
                         <div>
                             <h3>사업안내</h3>
-                            <ul>
+                            <ul class="active">
                                 <li>
-                                    <span>·</span><a href="">사업안내</a>
+                                    <span>·</span><a class="active" href="">사업안내</a>
                                 </li>
                             </ul>
                         </div>
