푸터 유관기관 코드 변경

--- a/main.html
+++ b/main.html
@@ -459,12 +459,24 @@
                         <a href="#">유관기관</a>
                     </li>
                 </ul>
-                <select id="agency">
-                    <option value="유관기관">유관기관</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                </select>
+
+                <div class="agency">
+                    <input type="checkbox" id="agency-open">
+                    <label for="agency-open">유관기관 <i class="icon-right-open"></i></label>
+                    <div class="agency-link">
+                        <a href="http://www.mohw.go.kr" target="blank">보건복지부</a>
+                        <a href="http://jejubokji.net" target="blank">제주특별자치도사회복지협의회</a>
+                        <a href="http://jeju.welfare.net" target="blank">제주특별자치도사회복지사협회</a>
+                        <a href="https://jj.chest.or.kr" target="blank">제주사회복지공동모금회</a>
+                        <a href="http://www.jejubumo.or.kr" target="blank">제주특별자치도장애인부모회</a>
+                        <a href="https://broso.or.kr/jeju" target="blank">제주특별자치도발달장애인지원센터</a>
+                        <a href="http://www.jaapd.or.kr" target="blank">제주특별자치도장애인권익옹호기관</a>
+                        <a href="http://www.jejurehab.or.kr" target="blank">제주특별자치도장애인종합복지관</a>
+                        <a href="http://jcil.or.kr" target="blank">제주장애인자립생활센터</a>
+                        <a href="http://www.jejuaidd.or.kr" target="blank">(사)제주특별자치도지적발달장애인복지협회</a>
+                    </div>
+
+                </div>
                 <address>
                     <p>제주특별자치도 제주시 중앙로 273, 나라키움 제주복합관사 101호(이도이동)  TEL: 064-751-5150  FAX: 064-756-5150</p>
                     <p>설립일: 2019년 09월  센터장: 최영열</p>
