--- a/sub01.html
+++ b/sub01.html
@@ -47,9 +47,9 @@
 
                     <div>
                         <h3>사업안내</h3>
-                        <ul class="active">
+                        <ul>
                             <li>
-                                <span>·</span><a class="active" href="">사업안내</a>
+                                <span>·</span><a href="">사업안내</a>
                             </li>
                         </ul>
                     </div>
@@ -89,7 +89,7 @@
                                 <span>·</span><a href="">문서자료</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">교육자료</a>
+                                <span>·</span><a href="">복지뉴스</a>
                             </li>
                             <li>
                                 <span>·</span><a href="">사진자료</a>
@@ -98,7 +98,7 @@
                                 <span>·</span><a href="">영상자료</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">발간자료</a>
+                                <span>·</span><a href="">웹진</a>
                             </li>
                         </ul>
                     </div>
@@ -147,11 +147,11 @@
             </h2>
 
             <div class="guide">
-                <div class="g01">
+                <!-- <div class="g01">
                     <h3>사업 대상자</h3>
                     <p>제주시에 거주하는 발달(지적,자폐성)장애인 및 뇌병변장애인</p>
                     <p class="small">· 1순위 : 생활시설 입소대기자 및 생활시설 퇴소 희망자 / · 2순위 : 그 외 발달 및 뇌병변 장애인</p class="small">
-                </div>
+                </div> -->
                 <div class="g02">
                     <h3>운영안내</h3>
                     <p>운영시간 : 주중(월~금) 09:00 ~ 18:00 / 공휴일 제외 <span>(이용문의 : 064-751-5150)</span></p>
@@ -162,25 +162,25 @@
 
                 <ul class="tabs">
                     <li>
-                        <a href="#" class="line active" data="tab01">지원주택</a>
+                        <a href="#" class="active" data="tab01">지원주택 <br>사업</a>
                     </li>
                     <li>
-                        <a href="#" class="line" data="tab02">이동지원</a>
+                        <a href="#" data="tab02">이동지원 <br>사업</a>
                     </li>
                     <li>
-                        <a href="#" data="tab03">행복플래너 운영</a>
+                        <a href="#" data="tab03">행복플래너 사업</a>
                     </li>
                     <li>
-                        <a href="#" data="tab04">안심생활 지원</a>
+                        <a href="#" data="tab04">안심생활 <br>지원사업</a>
                     </li>
                     <li>
-                        <a href="#" data="tab05">가족역량 강화사업</a>
+                        <a href="#" data="tab05">가족기능 <br>강화사업</a>
                     </li>
                     <li>
-                        <a href="#" data="tab06">정서지원 사업</a>
+                        <a href="#" data="tab06">상담 및 정서지원사업</a>
                     </li>
                     <li>
-                        <a href="#" data="tab07">지역사회 연계</a>
+                        <a href="#" data="tab07">지역사회 <br>연계사업</a>
                     </li>
                 </ul>
 
@@ -376,7 +376,7 @@
                     <a href="#">개인정보보호정책</a>
                 </li>
             </ul>
-            <<<<<<< HEAD=======>>>>>>> 672a3cbec53e924cca984dba535887408f10eca0
+            <!-- <<<<<<< HEAD=======>>>>>>> 672a3cbec53e924cca984dba535887408f10eca0 -->
                 <div class="agency">
                     <input type="checkbox" id="agency-open">
                     <label for="agency-open">유관기관 <i class="icon-right-open"></i></label>
