--- a/main.html
+++ b/main.html
@@ -90,7 +90,7 @@
                                 <span>·</span><a href="">문서자료</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">교육자료</a>
+                                <span>·</span><a href="">복지뉴스</a>
                             </li>
                             <li>
                                 <span>·</span><a href="">사진자료</a>
@@ -99,7 +99,7 @@
                                 <span>·</span><a href="">영상자료</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">발간자료</a>
+                                <span>·</span><a href="">웹진</a>
                             </li>
                         </ul>
                     </div>
