--- a/or02.html
+++ b/or02.html
@@ -47,9 +47,9 @@
 
                     <div>
                         <h3>사업안내</h3>
-                        <ul class="active">
+                        <ul>
                             <li>
-                                <span>·</span><a class="active" href="">사업안내</a>
+                                <span>·</span><a href="">사업안내</a>
                             </li>
                         </ul>
                     </div>
@@ -89,7 +89,7 @@
                                 <span>·</span><a href="">문서자료</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">교육자료</a>
+                                <span>·</span><a href="">복지뉴스</a>
                             </li>
                             <li>
                                 <span>·</span><a href="">사진자료</a>
@@ -98,7 +98,7 @@
                                 <span>·</span><a href="">영상자료</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">발간자료</a>
+                                <span>·</span><a href="">웹진</a>
                             </li>
                         </ul>
                     </div>
