후원계좌 추가

--- a/sub06.html
+++ b/sub06.html
@@ -197,7 +197,7 @@
                         <li>- 환경정리 : 센터 및 지원주택 내·외부 환경 정리</li>
                         <li>▶ 모집기간 : 수시</li>
                         <li>▶ 신청방법 : 방문 또는 전화문의 → 신청서 작성 → 배치 및 활동 → 실적인증</li>
-                        <li>- 방문 : 제주시 중앙로 273, 나라키움 제주복합관사 101호</li>
+                        <li>- 방문 : 제주특별자치도 제주시 중앙로 273, 나라키움 제주복합관사 101호</li>
                         <li>- 전화 : 064-751-5150</li>
                     </ul>
                 </div>
