조직도 수정

--- a/or03.html
+++ b/or03.html
@@ -222,13 +222,13 @@
                                     <dl>
                                         <dt>김형준 (사업지원팀장)</dt>
                                         <dd>· 사업지원팀 업무 총괄</dd>
-                                        <dd>· 가족기능강화사업, 장애인정서짖원사업, 이동지원사업</dd>
+                                        <dd>· 가족기능강화사업, 장애인정서지원사업, 이동지원사업</dd>
                                         <dd>· 홍보사업 총괄</dd>
                                     </dl>
                                 </li>
                                 <li>
                                     <dl>
-                                        <dt>양성우 (운전원)</dt>
+                                        <dt>양성우 / 현훈경 (운전원)</dt>
                                         <dd>· 이용자 접수 및 차량 배차 지원</dd>
                                         <dd>· 차량 운전 및 관리</dd>
                                         <dd>· 장애인 승·하차 지원</dd>
