--- a/sub04.html
+++ b/sub04.html
@@ -217,11 +217,11 @@
                         <ul>
                             <li>센터명 : 제주시장애인지역사회통합돌봄지원센터</li>
                             <li>설립일자 : 2019년 00월 00일</li>
-                            <li>센터장 : 최영일</li>
+                            <li>센터장 : 최영열</li>
                             <li>이용대상 : 제주시 거주 발달(지적, 자폐성)장애인 및 뇌병변장애인</li>
                             <li>전화번호 / FAX : 064-751-5150 / 064-756-5150</li>
                             <li>이메일 : huimang2015@hanmail.net</li>
-                            <li>소재지 : 제주특별자치도 제주시 중앙로 273, 나라키움복합관사 101호</li>
+                            <li>소재지 : 제주특별자치도 제주시 중앙로 273, 나라키움 제주복합관사 101호</li>
                         </ul>
                     </div>
 
