--- a/main.html
+++ b/main.html
@@ -240,7 +240,7 @@
                             </div>
                         </li>
                         <li class="veiw notice03">
-                            <h3>채용공고<a href=""><i class="icon-plus"></i></a></h3>
+                            <h3>복지뉴스<a href=""><i class="icon-plus"></i></a></h3>
                             <button class="btn left">왼쪽화살표<i class="icon-left-open"></i></button>
                             <button class="btn right">오른쪽화살표<i class="icon-right-open"></i></button>
                             <div class="border">
