--- a/or02.html
+++ b/or02.html
@@ -228,7 +228,7 @@
                                 <li>
                                     <dl>
                                         <dt>김종청 / 오종석 (응급안전요원)</dt>
-                                        <dd>· 장애인이 거주하는 지원주택, 자립생활주택 및 재가장애인 거주주택에 응급안전시스템 설치 기원</dd>
+                                        <dd>· 장애인이 거주하는 지원주택, 자립생활주택 및 재가장애인 거주주택에 <span>응급안전시스템 설치 기원</span></dd>
                                         <dd>· 스마트케어 시스템 모니터링 및 안심생활 지원</dd>
                                     </dl>
                                 </li>
