--- a/or04.html
+++ b/or04.html
@@ -240,7 +240,7 @@
                                     <dl>
                                         <dt>박수경 / 김수지 / 김양선 (행복코치)</dt>
                                         <dd>· 지원당사자의 '일상 생활'과 '사회 참여' 부분을 중점 지원</dd>
-                                        <dd>· 당사자 가정을 방문하여 실질적인 주거지원서비스(가사관리, 건강관리, 여가활동 등) 제공</dd>
+                                        <dd>· 당사자 가정을 방문하여 실질적인 주거지원서비스(가사관리, 건강관리, <span>여가활동 등) 제공</span></dd>
                                         <dd>· 행복플래너와 주기적으로 점검과 평가</dd>
                                     </dl>
                                 </li>
