--- a/organization.html
+++ b/organization.html
@@ -221,7 +221,7 @@
                             <li>이용대상 : 제주시 거주 발달(지적, 자폐성)장애인 및 뇌병변장애인</li>
                             <li>전화번호 / FAX : 064-751-5150 / 064-756-5150</li>
                             <li>이메일 : huimang2015@hanmail.net</li>
-                            <li>소재지 : 제주특별자치도 제주시 중앙로 273, 나라키움 제주복합관사 101호</li>
+                            <li>소재지 : 제주특별자치도 제주시 중앙로 273, 나라키움 제주복합관사 101호(이도이동)</li>
                         </ul>
                     </div>
 
@@ -237,12 +237,7 @@
                                 <li><a href="or03.html">사업지원팀</a></li>
                                 <li><a href="or04.html">주거지원팀</a></li>
                             </ul>
-
-                            <ul class="teamwork">
-                                <li>안심생활지원사업</li>
-                                <li>이동지원사업</li>
-                                <li>행복플래너</li>
-                            </ul>
+                           
                         </div>
                     </div>
                 </div>
