조직도 수정

--- a/sub04.html
+++ b/sub04.html
@@ -229,15 +229,15 @@
                         <h5><small>■</small>조직도</h5>
 
                         <div>
-                            <h6><a href="or01.html">센터장</a></h6>
-                            <p>운영위원회</p>
-
+                           
                             <ul class="team">
+                                <li><a href="or01.html">센터장</a></li>
+                                <li>운영위원회</li>
                                 <li><a href="or02.html">운영지원팀</a></li>
                                 <li><a href="or03.html">사업지원팀</a></li>
                                 <li><a href="or04.html">주거지원팀</a></li>
                             </ul>
-
+                           
                         </div>
                     </div>
                 </div>
