사업안내 수정

--- a/sub01.html
+++ b/sub01.html
@@ -147,11 +147,7 @@
             </h2>
 
             <div class="guide">
-                <!-- <div class="g01">
-                    <h3>사업 대상자</h3>
-                    <p>제주시에 거주하는 발달(지적,자폐성)장애인 및 뇌병변장애인</p>
-                    <p class="small">· 1순위 : 생활시설 입소대기자 및 생활시설 퇴소 희망자 / · 2순위 : 그 외 발달 및 뇌병변 장애인</p class="small">
-                </div> -->
+
                 <div class="g02">
                     <h3>운영안내</h3>
                     <p>운영시간 : 주중(월~금) 09:00 ~ 18:00 / 공휴일 제외 <span>(이용문의 : 064-751-5150)</span></p>
@@ -188,9 +184,7 @@
                     <div class="con01">
                         <h5><small>■</small>사업 대상자</h5>
                         <ul>
-                            <li>제주시에 거주하는 발달(지적,자폐성)장애인 및 뇌병변장애인
-                                <p>· 1순위 : 생활시설 입소대기자 및 생활시설 퇴소 희망자 / · 2순위 : 그 외 발달 및 뇌병변 장애인</p>
-                            </li>
+                            <li>희망하는 입주 신청일 기준 만 19세 이상, 만 55세 이하인 자에 해당하는 정책대상자</li>
                         </ul>
                     </div>
 
@@ -200,6 +194,27 @@
                             <li>- 자립생활주택 등에서 적응 또는 독립생활이 가능한 재가장애인들에게 독립적인 주거공간 제공</li>
                             <li>- 장애인 당사자에 맞춘 편의시설 제공 등 주거환경 개조 지원</li>
                             <li>- 일상생활, 지역사회 이용 등 자립에 필요한 돌봄서비스 제공</li>
+                        </ul>
+                    </div>
+                    <div class="con03">
+                        <h5><small>■</small>지원주택</h5>
+                        <div class="care">
+                            <h6><img src="sources/images/logo3.svg">지원주택이란?</h6>
+                            <p>지원주택은 지역사회 주거생활이 취약한 사람들에게 안정적인 주거생활이 가능하도록 주택을 제공하면서 <br>여기에 필요한 서비스를 연결하는 것을 의미</p>
+                        </div>
+                        <ul class="care-list">
+                            <li>▶ 입주조건</li>
+                            <li>- 생활비 부담이 가능하고 지원주택에서 제공하는 자립생활지원서비스를 통해 자립생활이 가능한 자</li>
+                            <li>- 일상생활능력이 있거나 서비스 지원을 받으면 일상생활에 큰 지장이 없는 자</li>
+                            <li>- 공동생활(2인)에 있어 결격사유가 없는 자</li>
+                            <li>▶ 이용절차</li>
+                            <li><img src="sources/images/use2.svg" alt="이용절차"></li>
+                            <li>▶ 서비스 지원체계 : 행복매니저의 개인별 주거지원계획 및 관리에 따른 주거코치 배정으로 맞춤형 주거지원 서비스 제공</li>
+                            <li>▶ 주거지원서비스</li>
+                            <li>- 주거지원서비스 : 주택알선 및 계약, 임대주택 신청, 주거관리 및 유지, 이사 지원</li>
+                            <li>- 일상생활 : 자기관리, 가사관리, 건강관리, 금전관리, 개인안전, 비상대응 계획</li>
+                            <li>- 사회참여 : 쇼핑, 교통수단, 여가활동, 지역사회활동 관계</li>
+                            <li>- 옹호 : 법률지원 연계, 공공후견인 신청, 발달장애인 신탁 연계, 권리 보호</li>
                         </ul>
                     </div>
                 </div>
@@ -224,27 +239,20 @@
                     <div class="con03">
                         <h5><small>■</small>사업 안내</h5>
                         <ul>
-                            <li>▶ 신청대상 : 지역사회 통합돌봄 정책대상 장애인 (제주시에 거주하는 발달장애인 및 뇌병변 장애인)</li>
-                            <li>▶ 신청일정 : 상시</li>
                             <li>▶ 신청접수 : 읍면동 주민센터 맞춤형 복지팀 및 제주시장애인지역사회통합돌봄지원센터</li>
-                            <li>▶ 이용방법</li>
+                            <li>▶ 이용절차</li>
                             <li>
                                 <ul class="order">
                                     <img src="sources/images/order.svg" alt="이용방법">
                                 </ul>
                             </li>
-                            <li>▶ 이용요금 : 무료</li>
-                            <li>▶ 운행시간 : 09:00 ~ 18:00 (공휴일 및 일요일 제외)</li>
-                            <li>▶ 운행지역 : 제주특별자치도 전지역 (섬지역 제외)</li>
-                            <li>▶ 운행차량 : 총 3대 (12인승 승합차량 1대, 휠체어 슬로프 차량 2대)</li>
-                            <li>▶ 제출서류 : 이용신청서, 장애인복지카드(증명서)</li>
-                            <li>▶ 유의사항</li>
-                            <li>- 예약은 전화를 통해서만 접수받으며, 운전원을 통해 직접 신청할 수 없습니다.</li>
-                            <li>- 이용횟수는 1일 1회 왕복을 제한하며, 필요시 보호자 1명이 동행할 수 있습니다.</li>
-                            <li>- 특정 차량 또는 운전원을 지정할 수 없으며, 이용시 장애인복지카드 등 증명서류를 제시하여야 합니다.</li>
-                            <li>- 출발지 또는 목적지 변경 시, 예약을 취소할 경우에는 최소 1시간 전까지 알려야 합니다.</li>
-                            <li>- 상담원 또는 운전원에게 폭언, 폭행, 성추행 등을 하여서는 안됩니다.</li>
-                            <li>- 기타 위의 사항이 지켜지지 않을 시 이용이 제한될 수 있습니다.</li>
+                            <li>▶ 준수사항</li>
+                            <li>- 예약전화를 통해 이용 신청해 주세요.</li>
+                            <li>- 특정 차량 또는 운전원을 지정할 수 없습니다.</li>
+                            <li>- 출발지·목적지 변경 및 예약을 취소할 경우에는 최소 1시간 전까지 연락 바랍니다.</li>
+                            <li>- 운전원에게 안전운행에 방해되는 신체적 접촉이나 폭언은 삼가해 주세요.</li>
+                            <li>- 안전운행에 필요한 경우 보호자가 동승할 수 있습니다.</li>
+                            <li>- 준수사항을 이행하지 않을 시 이용이 제한될 수 있습니다.</li>
                         </ul>
                         <p>※ 기타 문의사항 또는 민원 발생 시 <span>제주시장애인지역사회통합돌봄지원센터 (T.064-751-5150)</span>로 연락 바랍니다.</p>
                     </div>
@@ -254,17 +262,30 @@
                     <div class="con01">
                         <h5><small>■</small>사업 대상자</h5>
                         <ul>
-                            <li>제주시에 거주하는 발달(지적,자폐성)장애인 및 뇌병변장애인
-                                <p>· 1순위 : 생활시설 입소대기자 및 생활시설 퇴소 희망자 / · 2순위 : 그 외 발달 및 뇌병변 장애인</p>
-                            </li>
+                            <li>정책대상자 중 자립지원계획 수립 및 서비스 연계가 필요한 자</li>
                         </ul>
                     </div>
 
                     <div class="con02">
                         <h5><small>■</small>사업 내용</h5>
                         <ul>
-                            <li>- 통합 돌봄 대상자에 대한 자립지원계획 수립 및 서비스 연계</li>
-                            <li>- 행복코치의 업무 조정 및 연계를 통한 지원업무 진행</li>
+                            <li>- 지원주택 대상자에게 지역사회 내 교육, 활동, 건강 등 일상생활에 필요한 다양한 프로그램 연계 및 지원</li>
+                            <li>- 정책대상자에 대한 사례관리 및 서비스 연계 지원</li>
+                        </ul>
+                    </div>
+
+                    <div class="con03">
+                        <h5><small>■</small>운영 인력</h5>
+                        <ul>
+                            <li>- 행복플래너 : 정책대상자에 대한 사례관리 및 서비스 연계</li>
+                            <li>- 행복코치 : 지원주택 거주자에게 일상생활 지원</li>
+                        </ul>
+                    </div>
+
+                    <div class="con04">
+                        <h5><small>■</small>이용 절차</h5>
+                        <ul>
+                            <img src="sources/images/use.svg" alt="이용방법">
                         </ul>
                     </div>
                 </div>
@@ -299,6 +320,8 @@
                             <li>- 문의처 : 읍·면·동 주민센터 통합돌봄 창구(064-728-3041 ~ 3043) / 제주시장애인지역사회통합돌봄지원센터 (064-751-5150)</li>
                             <li>▶ 주요서비스</li>
                             <li><img src="sources/images/service.svg" alt="주요서비스"></li>
+                            <li>▶ 지원장비</li>
+                            <li class="eq"><img src="sources/images/equipment.svg" alt="지원장비"></li>
                         </ul>
                     </div>
                 </div>
@@ -316,11 +339,23 @@
                     <div class="con02">
                         <h5><small>■</small>사업 내용</h5>
                         <ul>
-                            <li>- 부부상담, 가족 집단상담, 가족놀이 치료, 비폭력 공감대화교육 등 가족 휴식·치료 프로그램 지원</li>
+                            <li>- 부부상담, 가족 집단상담, 가족놀이 치료 등 정책대상 장애인 및 가족에 대한 가족 기능강화 프로그램 제공</li>
+                        </ul>
+                    </div>
+
+                    <div class="con03">
+                        <h5><small>■</small>가족기능강화 프로그램</h5>
+                        <div class="care">
+                            <h6><img src="sources/images/logo3.svg">가족기능강화 프로그램이란?</h6>
+                            <p>장애인 가족의 갈등 해소 도움 및 정서적 안정과 바람직한 가족 기능을 강화시켜 건전하고 적극적인 사회활동 참여 및 <br>가족의 삶의 질 향상 지원</p>
+                        </div>
+                        <ul class="care-list">
+                            <li>▶ 신청기간 : 수시</li>
+                            <li>▶ 신청 및 접수 : 제주시장애인지역사회통합돌봄지원센터(T.064-751-5150)</li>
                         </ul>
                     </div>
                 </div>
-
+                
                 <div id="tab06" class="tab_contents">
                     <div class="con01">
                         <h5><small>■</small>사업 대상자</h5>
@@ -334,8 +369,19 @@
                     <div class="con02">
                         <h5><small>■</small>사업 내용</h5>
                         <ul>
-                            <li>- 장애인 1:1 상담, 소통향상 집단상담, 집단 인형치료, 집단 원예치료 등 지원</li>
-                            <li>- 대중교통 이용, 요리체험, 마트이용 등 자립생활 프로그램 지원</li>
+                            <li>- 장애인 1:1 상담, 소통향상 집단상담, 집단 인형치료, 집단 원예치료, 자립생활 프로그램 등 상담 및 정서지원 프로그램 제공</li>
+                        </ul>
+                    </div>
+
+                    <div class="con03">
+                        <h5><small>■</small>상담 및 정서지원 프로그램</h5>
+                        <div class="care">
+                            <h6><img src="sources/images/logo3.svg">상담 및 정서지원 프로그램이란?</h6>
+                            <p>정책대상 장애인들에게 지속적인 정서지원을 통해 지역사회 적응 및 자립생활에 필요한 서비스 지원</p>
+                        </div>
+                        <ul class="care-list">
+                            <li>▶ 신청기간 : 수시</li>
+                            <li>▶ 신청 및 접수 : 제주시장애인지역사회통합돌봄지원센터(T.064-751-5150)</li>
                         </ul>
                     </div>
                 </div>
