--- a/sub01.html
+++ b/sub01.html
@@ -422,30 +422,30 @@
                     <a href="#">개인정보보호정책</a>
                 </li>
             </ul>
-            <!-- <<<<<<< HEAD=======>>>>>>> 672a3cbec53e924cca984dba535887408f10eca0 -->
-                <div class="agency">
-                    <input type="checkbox" id="agency-open">
-                    <label for="agency-open">유관기관 <i class="icon-right-open"></i></label>
-                    <div class="agency-link">
-                        <a href="http://www.mohw.go.kr" target="blank">보건복지부</a>
-                        <a href="http://jejubokji.net" target="blank">제주특별자치도사회복지협의회</a>
-                        <a href="http://jeju.welfare.net" target="blank">제주특별자치도사회복지사협회</a>
-                        <a href="https://jj.chest.or.kr" target="blank">제주사회복지공동모금회</a>
-                        <a href="http://www.jejubumo.or.kr" target="blank">제주특별자치도장애인부모회</a>
-                        <a href="https://broso.or.kr/jeju" target="blank">제주특별자치도발달장애인지원센터</a>
-                        <a href="http://www.jaapd.or.kr" target="blank">제주특별자치도장애인권익옹호기관</a>
-                        <a href="http://www.jejurehab.or.kr" target="blank">제주특별자치도장애인종합복지관</a>
-                        <a href="http://jcil.or.kr" target="blank">제주장애인자립생활센터</a>
-                        <a href="http://www.jejuaidd.or.kr" target="blank">(사)제주특별자치도지적발달장애인복지협회</a>
-                    </div>
 
+            <div class="agency">
+                <input type="checkbox" id="agency-open">
+                <label for="agency-open">유관기관 <i class="icon-right-open"></i></label>
+                <div class="agency-link">
+                    <a href="http://www.mohw.go.kr" target="blank">보건복지부</a>
+                    <a href="http://jejubokji.net" target="blank">제주특별자치도사회복지협의회</a>
+                    <a href="http://jeju.welfare.net" target="blank">제주특별자치도사회복지사협회</a>
+                    <a href="https://jj.chest.or.kr" target="blank">제주사회복지공동모금회</a>
+                    <a href="http://www.jejubumo.or.kr" target="blank">제주특별자치도장애인부모회</a>
+                    <a href="https://broso.or.kr/jeju" target="blank">제주특별자치도발달장애인지원센터</a>
+                    <a href="http://www.jaapd.or.kr" target="blank">제주특별자치도장애인권익옹호기관</a>
+                    <a href="http://www.jejurehab.or.kr" target="blank">제주특별자치도장애인종합복지관</a>
+                    <a href="http://jcil.or.kr" target="blank">제주장애인자립생활센터</a>
+                    <a href="http://www.jejuaidd.or.kr" target="blank">(사)제주특별자치도지적발달장애인복지협회</a>
                 </div>
-                <address>
+
+            </div>
+            <address>
                     <p>제주특별자치도 제주시 중앙로 273, 나라키움 제주복합관사 101호(이도이동)  TEL: 064-751-5150  FAX: 064-756-5150</p>
-                    <p>설립일: 2019년 09월  센터장: 최영열</p>
+                    <p>개소일: 2019년 11월 28일  센터장: 최영열</p>
                 </address>
 
-                <p class="copyright">ⓒ제주시장애인지역사회돌봄지원센터 All Rights Reserved.</p>
+            <p class="copyright">ⓒ제주시장애인지역사회통합돌봄지원센터 All Rights Reserved.</p>
         </div>
     </footer>
     <!-- E:footer -->
