--- a/sub03.html
+++ b/sub03.html
@@ -272,11 +272,11 @@
 
             </div>
             <address>
-                <p>제주특별자치도 제주시 중앙로 273, 나라키움 제주복합관사 101호(이도이동)  TEL: 064-751-5150  FAX: 064-756-5150</p>
-                <p>설립일: 2019년 09월  센터장: 최영열</p>
-            </address>
+                    <p>제주특별자치도 제주시 중앙로 273, 나라키움 제주복합관사 101호(이도이동)  TEL: 064-751-5150  FAX: 064-756-5150</p>
+                    <p>개소일: 2019년 11월 28일  센터장: 최영열</p>
+                </address>
 
-            <p class="copyright">ⓒ제주시장애인지역사회돌봄지원센터 All Rights Reserved.</p>
+            <p class="copyright">ⓒ제주시장애인지역사회통합돌봄지원센터 All Rights Reserved.</p>
         </div>
     </footer>
     <!-- E:footer -->
