연혁 글자 수정

--- a/or01.html
+++ b/or01.html
@@ -264,40 +264,48 @@
                     <h5>2019</h5>
 
                     <dl>
-                        <dt>04.04</dt>
-                        <dd>장애인 분야 선도사업 선정 (제주시, 대구 남구)</dd>
-
-                        <dt>06.21</dt>
-                        <dd>제주시 장애인 통합돌봄선도사업 출범식</dd>
-
-                        <dt>07.19 ~ 08.01</dt>
-                        <dd>지역사회 통합돌봄 보조사업자 공모</dd>
-
                         <dt>08.22</dt>
-                        <dd>보조사업자 선정</dd>
+                        <dd>제주시장애인지역사회통합돌봄 보조사업자 희망나래 선정</dd>
 
-                        <dt>08.28</dt>
-                        <dd>보조사업자 간담회</dd>
+                        <dt>09.01</dt>
+                        <dd>제주시장애인지역사회통합돌봄지원센터 사업시작(초대 센터장 : 최영열)</dd>
 
                         <dt>09.16 ~ 17</dt>
-                        <dd>지역사회 통합돌봄 벤치마킹</dd>
+                        <dd>벤치마킹(대구, 서울 일대)</dd>
+
+                        <dt>11.13</dt>
+                        <dd>세미나(장애인지역사회 이전을 위한 지원주택 사업)</dd>
 
                         <dt>11.14</dt>
-                        <dd>지역사회 통합돌봄 욕구조사 보고회</dd>
+                        <dd>지역사회통합돌봄 정책대상자 욕구조사 보고대회</dd>
 
                         <dt>11.28</dt>
-                        <dd>개소식</dd>
+                        <dd>제주시장애인지역사회통합돌봄지원센터 개소식</dd>
+
+                        <dt>12.01</dt>
+                        <dd>지원주택 6호 계약(제주특별자치도개발공사-이도네집 2호, 정실뜨래별 4호)</dd>
+
+                        <dt>12.02</dt>
+                        <dd>운영위원회 위촉</dd>
+
+                        <dt>12.03</dt>
+                        <dd>장애인 안심생활 지원서비스(스마트홈케어서비스) 업체 선정-하이디어솔루션즈</dd>
 
                         <dt>12.07</dt>
-                        <dd>장애인 욕구에 기반한 커뮤니티 케어 지원체계 구축방안 세미나 개최</dd>
+                        <dd>세미나(장애인 욕구에 기반한 커뮤니티 케어 지원체계 구축 방안)</dd>
 
                         <dt>12.09</dt>
-                        <dd>제주시 장애인 지역사회 통합돌봄(커뮤니티 케어) 실현을 위한 세미나 개최</dd>
+                        <dd>세미나(community care, 어떻게 할 것인가? : 자립과 상호의존의 융합)</dd>
+
+                        <dt>12.10</dt>
+                        <dd>운영위원회 개최(지원주택입주대상자 선정)</dd>
 
                         <dt>12.20</dt>
-                        <dd>지역사회 통합돌봄 선도사업의 성공적 추진을 위한 100인 토론회 개최</dd>
-                    </dl>
+                        <dd>지역사회 통합돌봄 선도사업의 성공적 추진을 위한 100인 토론회</dd>
 
+                        <dt>12.30</dt>
+                        <dd>장애인지원주택 입주자 8명 임대계약 체결</dd>
+                    </dl>
                 </div>
             </section>
         </div>
