--- a/sub04.html
+++ b/sub04.html
@@ -292,7 +292,7 @@
                         <dd>제주시장애인지역사회통합돌봄지원센터 개소식</dd>
 
                         <dt>12.01</dt>
-                        <dd>지원주택 6호 계약(제주특별자치도개발공사-이도NE집 2호, 정실뜨래별 4호)</dd>
+                        <dd>지원주택 6호 계약(제주특별자치도개발공사-이도네집 2호, 정실뜨래별 4호)</dd>
 
                         <dt>12.02</dt>
                         <dd>운영위원회 위촉</dd>
