조직도 수정

--- a/organization.html
+++ b/organization.html
@@ -263,6 +263,12 @@
                                 <li><a href="or03.html">사업지원팀</a></li>
                                 <li><a href="or04.html">주거지원팀</a></li>
                             </ul>
+
+                            <ul class="work">
+                                <li>안심생활지원사업</li>
+                                <li>이동지원사업</li>
+                                <li>행복플래너</li>
+                            </ul>
                            
                         </div>
                     </div>
