--- a/sub01.html
+++ b/sub01.html
@@ -223,9 +223,7 @@
                     <div class="con01">
                         <h5><small>■</small>사업 대상자</h5>
                         <ul>
-                            <li>제주시에 거주하는 발달(지적,자폐성)장애인 및 뇌병변장애인
-                                <p>· 1순위 : 생활시설 입소대기자 및 생활시설 퇴소 희망자 / · 2순위 : 그 외 발달 및 뇌병변 장애인</p>
-                            </li>
+                            <li>제주시에 주소를 둔 발달(지적·자폐성)장애인, 뇌병변장애인 중 이동지원 서비스가 필요한 자</li>
                         </ul>
                     </div>
 
@@ -239,13 +237,17 @@
                     <div class="con03">
                         <h5><small>■</small>사업 안내</h5>
                         <ul>
-                            <li>▶ 신청접수 : 읍면동 주민센터 맞춤형 복지팀 및 제주시장애인지역사회통합돌봄지원센터</li>
+                            <li>▶ 신청접수 : 제주시장애인지역사회통합돌봄지원센터</li>
                             <li>▶ 이용절차</li>
                             <li>
                                 <ul class="order">
                                     <img src="sources/images/order.svg" alt="이용방법">
                                 </ul>
                             </li>
+                            <li>▶ 이용요금 : 무료</li>
+                            <li>▶ 운행시간 : 09:00 ~ 18:00 (월~금요일, 공휴일 제외)</li>
+                            <li>▶ 운행지역 : 제주특별자치도 전지역 (섬지역 제외)</li>
+                            <li>▶ 운행차량 : 총 3대 (휠체어 슬로프 차량 2대, 12인승 승합차량 1대)</li>
                             <li>▶ 준수사항</li>
                             <li>- 예약전화를 통해 이용 신청해 주세요.</li>
                             <li>- 특정 차량 또는 운전원을 지정할 수 없습니다.</li>
@@ -262,15 +264,21 @@
                     <div class="con01">
                         <h5><small>■</small>사업 대상자</h5>
                         <ul>
-                            <li>정책대상자 중 자립지원계획 수립 및 서비스 연계가 필요한 자</li>
+                            <li>본인 또는 가족이 마련한 주택에서 독립생활을 유지하고 있으나 주거지원 서비스가 필요한 제주시에 주소를 둔 발달 (지적·자폐성) 장애인, 뇌병변장애인</li>
                         </ul>
                     </div>
 
                     <div class="con02">
-                        <h5><small>■</small>사업 내용</h5>
+                        <h5><small>■</small>운영인력</h5>
                         <ul>
-                            <li>- 지원주택 대상자에게 지역사회 내 교육, 활동, 건강 등 일상생활에 필요한 다양한 프로그램 연계 및 지원</li>
+                            <li>▶ 행복플래너</li>
                             <li>- 정책대상자에 대한 사례관리 및 서비스 연계 지원</li>
+                            <li>- 입주자가 지역사회에서 일상생활에 필요한 다양한 프로그램 지원</li>
+                            <li>- 지원당사자의 '주거'와 '옹호'를 중점적으로 지원</li>
+                            <li>- 임대주택신청 및 주택 마련 알선, 사회서비스 신청</li>
+                            <li>- 자원개발 및 서비스 연계</li>
+                            <li>- 당사자 및 보호자 상담 및 교육</li>
+                            <li>- 행복코치 업무조정 및 연계</li>
                         </ul>
                     </div>
 
@@ -278,7 +286,7 @@
                         <h5><small>■</small>운영 인력</h5>
                         <ul>
                             <li>- 행복플래너 : 정책대상자에 대한 사례관리 및 서비스 연계</li>
-                            <li>- 행복코치 : 지원주택 거주자에게 일상생활 지원</li>
+                            <li>- 통합돌봄대상자에 대한 개인별 주거지원계획 수립 및 사례관리</li>
                         </ul>
                     </div>
 
@@ -294,17 +302,15 @@
                     <div class="con01">
                         <h5><small>■</small>사업 대상자</h5>
                         <ul>
-                            <li>제주시에 거주하는 발달(지적,자폐성)장애인 및 뇌병변장애인
-                                <p>· 1순위 : 생활시설 입소대기자 및 생활시설 퇴소 희망자 / · 2순위 : 그 외 발달 및 뇌병변 장애인</p>
-                            </li>
+                            <li>제주시에 주소를 둔 발달(지적·자폐성)장애인, 뇌병변장애인 200가구</li>
                         </ul>
                     </div>
 
                     <div class="con02">
                         <h5><small>■</small>사업 내용</h5>
                         <ul>
-                            <li>- 응급안전시스템 모니터링 인력 구성</li>
-                            <li>- 사물인터넷, 스마트홈 등 안전시스템 설치</li>
+                            <li>- 스마트홈케어서비스 : 스마트허브, 응급호출기, 화재감지센서, 자동가스차단기, 도어센서, 스마트IoT(사물인터넷) LED거실등, <span>스마트플러그, 활동량감지센서</span></li>
+                            <li>- 모니터링 및 안전확인 : 모니터링 요원이 응급상황 실시간 모니터링을 통한 안전 확인 서비스</li>
                         </ul>
                     </div>
                     <div class="con03">
@@ -314,7 +320,6 @@
                             <p>장애인 가정에 활동량감지기, 응급호출기, 스마트 전등, 가스차단기 등을 설치하여 응급상황 발생시 보호자 및 응급안전요원에게 연락해 후속 조치를 제공하는 서비스입니다.</p>
                         </div>
                         <ul class="care-list">
-                            <li>▶ 지원대상 : 제주시에 주소를 둔 발달장애인(지적·자폐성)장애인, 뇌병변장애인 200가구</li>
                             <li>▶ 신청 및 접수 방법 : 주민등록상 주소지 주민센터 통합돌봄 창구 방문 신청</li>
                             <li>- 신청서류 : 제주시 장애인 지역사회 통합돌봄 신청서 1부 / 개인정보 수집·이용 제공동의서 1부</li>
                             <li>- 문의처 : 읍·면·동 주민센터 통합돌봄 창구(064-728-3041 ~ 3043) / 제주시장애인지역사회통합돌봄지원센터 (064-751-5150)</li>
